<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootview"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#F0FFF0"
    android:orientation="vertical">

    <EditText
        android:id="@+id/lingDongShu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:digits="12345678"
        android:hint="@string/lingDongShu_remind"
        android:inputType="number"
        android:maxLength="1" />


    <LinearLayout
        android:id="@+id/choose_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lingDongShu"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tianPan_remind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:maxLines="2"
                android:text="@string/tianPan_remind"
                android:textColor="#8470FF"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tianPan_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/tianPan"
                android:textColor="#009100"
                android:textSize="20sp" />

            <ImageButton
                android:id="@+id/tianPanChoose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/tianpan"
                android:contentDescription="@string/tianPan_remind" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/diPan_remind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:maxLines="2"
                android:text="@string/diPan_remind"
                android:textColor="#8470FF"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/diPan_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/diPan"
                android:textColor="#009100"
                android:textSize="20sp" />

            <ImageButton
                android:id="@+id/diPanChoose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/dipan"
                android:contentDescription="@string/diPan_remind" />

        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/yuCeResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/choose_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/resultButton_text" />

</RelativeLayout>